--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ header a {
     font-weight: 500;
 }
 
-
 section{
     position: relative;
     height: 100vh;
@@ -220,7 +219,18 @@ footer p {
     color: #e0e0e0; 
 }
 
+#divider{
+    display: none;
+    width: 100%;
+    height: 1px;
+    background-color: #b6b6b6;
+    margin-top: 18px;
+}
+
 @media (max-width: 768px) {
+    #divider{
+        display: block;
+    }
     header h3 {
         font-size: 1.5rem;
     }
@@ -259,9 +269,18 @@ footer p {
         padding: 8px 16px;
         font-size: 0.9rem;
     }
+
+    
+    #textSide div p{
+        text-align: justify;
+    }
+
 }
 
 @media (max-width: 480px) {
+    #divider{
+        display: block;
+    }
     header h3 {
         font-size: 1.2rem;
     }
@@ -294,4 +313,13 @@ footer p {
         padding: 6px 12px;
         font-size: 0.8rem;
     }
+    
+    footer p{
+        font-size: 10px;
+    }
+
+    #textSide div p{
+        text-align: justify;
+    }
+
 }
