--- a/style.css
+++ b/style.css
@@ -203,3 +203,87 @@ footer p{
     font-size: 1rem;
     color: #e0e0e0;
 }
+
+@media (max-width:480px) {
+    header h3{
+        font-size: 1rem;
+    }
+    a{
+        font-size: 0.7rem;
+    }
+    #mainText h1 {
+        font-size: 1.5rem;
+    }
+    .container{
+        height: 100vh;
+    }
+    .innerContainer{
+        flex-direction: column;
+        padding: 20px;
+    }
+    #textSide{
+        width: 100%;
+    }
+    #imgSide{
+        width: 100%;
+    }
+    #imgSide img{
+        width: 120px;
+    }
+    #imgSide h2{
+        font-size: 1rem;
+    }
+    #divider{
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: #b6b6b6;
+        margin: 18px 0;
+    }
+
+    footer p{
+        font-size: 10px;
+    }
+}
+
+@media (max-width:768px) {
+    header h3{
+        font-size: 1.2rem;
+    }
+    a{
+        font-size: 1rem;
+    }
+    #mainText h1 {
+        font-size: 2rem;
+    }
+    .container{
+        height: 100vh;
+    }
+    .innerContainer{
+        flex-direction: column;
+        padding: 20px;
+    }
+    #textSide{
+        width: 100%;
+    }
+    #imgSide{
+        width: 100%;
+    }
+    #imgSide img{
+        width: 150px;
+    }
+    #imgSide h2{
+        font-size: 1.3rem;
+    }
+    #divider{
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: #b6b6b6;
+        margin: 18px 0;
+    }
+
+    footer p{
+        font-size: 10px;
+    }
+}
